<resources>
    <string name="app_name">My Application</string>
    <string name="besedilo1">Mobile application!</string>
    <string name="besedilo2">Mobilna aplikacija!</string>
    <string name="gumb">Klikni me</string>
    <string name="pogoji">Subscribe to the newsletters</string>
    <string name="toast_besedilo">My first Android Studio application!</string>
    <string name="snackbar_besedilo">Just another option for button.</string>
    <string name="moski">Male</string>
    <string name="zenska">Female</string>
    <string name="fab_opis">Dodaj</string>
</resources>